RESOLVED FIXED282160
[iPhone] PiP with Forbes.com stuck on a single frame
https://bugs.webkit.org/show_bug.cgi?id=282160
Summary [iPhone] PiP with Forbes.com stuck on a single frame
Jean-Yves Avenard [:jya]
Reported 2024-10-27 19:59:25 PDT
PiP mode stucks on a single frame however progress bar keeps showing progress. Steps to Reproduce: 1. Visit https://www.forbes.com/sites/greatspeculations/2022/11/07/diversifying-with-gold-bitcoin-and-other-decentralized-assets/?traffic_source=Connatix&sh=6d036c06c91a 2. Play the video and use PiP mode 3. Observe the video and progress bar in PiP mode.
Attachments
Jean-Yves Avenard [:jya]
Comment 1 2024-10-27 19:59:45 PDT
Jean-Yves Avenard [:jya]
Comment 2 2024-10-27 20:02:30 PDT
EWS
Comment 3 2024-10-28 01:20:40 PDT
Committed 285758@main (c3683f9184f3): <https://commits.webkit.org/285758@main> Reviewed commits have been landed. Closing PR #35779 and removing active labels.
EWS
Comment 4 2024-11-21 09:06:57 PST
Committed 283286.518@safari-7620-branch (75195593956b): <https://commits.webkit.org/283286.518@safari-7620-branch> Reviewed commits have been landed. Closing PR #2331 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.