[iPhone] PiP with Forbes.com stuck on a single frame https://bugs.webkit.org/show_bug.cgi?id=282160 rdar://102086489

Reviewed by Youenn Fablet.

Add forbes.com quirks setting requiresUserGestureToPauseInPictureInPicture.
Manually tested.

* Source/WebCore/page/Quirks.cpp:
(WebCore::Quirks::requiresUserGestureToPauseInPictureInPicture const):

Canonical link: https://commits.webkit.org/285758@main